--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .scrollbar::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
+    .scrollbar::-webkit-scrollbar-track {
+      /* border-radius: 0; */
+      background: #EEEDED;
+    }
+    .scrollbar::-webkit-scrollbar-thumb {
+      background: #19171B;
+      border-radius: 100vh;
+    }
+    .scrollbar::-webkit-scrollbar-thumb:hover {
+      background: linear-gradient(0deg, #820AA1 0%,  #61A100 100%);
+    }
+  }
